tests/baselines/reference/parserPostfixPostfixExpression1.errors.txt
==== tests/cases/compiler/parserPostfixPostfixExpression1.ts (3 errors) ====
    a++ ++;
        ~~
!!! parserPostfixPostfixExpression1.ts(1,5): error TS1005: ';' expected.
          ~
!!! parserPostfixPostfixExpression1.ts(1,7): error TS1005: 'expression' expected.
    ~
!!! parserPostfixPostfixExpression1.ts(1,1): error TS2095: Cannot find name 'a'.